feat(be): add patch method for diets
