# be/internal/handlers/server.go
@@ -42,6 +42,7 @@ func (s *Server) Run() {
 	router.HandleFunc("/api/v1/diets/{id}", makeHTTPHandleFunc(apiDiets.handleGetByID)).Methods("GET")
 	router.HandleFunc("/api/v1/diets/{id}", makeHTTPHandleFunc(apiDiets.handlePutByID)).Methods("PUT")
 	router.HandleFunc("/api/v1/diets/{id}", makeHTTPHandleFunc(apiDiets.handleDeleteByID)).Methods("DELETE")
+	router.HandleFunc("/api/v1/diets/{id}/short", makeHTTPHandleFunc(apiDiets.handlePatchShortByID)).Methods("PATCH")
 	apiDietContext := NewHandlerDietContext()
 	router.HandleFunc("/api/v1/diet-context", makeHTTPHandleFunc(apiDietContext.handleGet)).Methods("GET")
 	router.HandleFunc("/api/v1/diet-context", makeHTTPHandleFunc(apiDietContext.handlePut)).Methods("PUT")
